--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-  <h1>YOUR NAME</h1>
+  <h1>kjydb</h1>
   <p>Welcome to my website!</p>
   <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ffiles.wojak.meme%2F2025%2F02%2F28230358%2F2b11145b50af931559c665b60dad69b3.jpg&f=1&nofb=1&ipt=718a531e412e781d9a9f4db45fd6b4511b07ec9e5ff1869bf686892a29cd4f71" />
 </body>
