--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>kjydb</h1>
   <p>Welcome to my website!</p>
-  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ffiles.wojak.meme%2F2025%2F02%2F28230358%2F2b11145b50af931559c665b60dad69b3.jpg&f=1&nofb=1&ipt=718a531e412e781d9a9f4db45fd6b4511b07ec9e5ff1869bf686892a29cd4f71" class="overlay"/>
+  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi0.wp.com%2Fi.kym-cdn.com%2Fentries%2Ficons%2Foriginal%2F000%2F035%2F627%2Fcover2.jpg&f=1&nofb=1&ipt=67469a26957df7709c341ae28029cad2c967d5766e48f5e48adecb9166e60654" class="overlay"/>
 </body>
 
 </html>
